# Solana_homework_3

./: .gitignore  Cargo.toml  README.md  jest.config.js  lib.rs  mint_non_transferable_nft.rs  mint_test.ts  mint_token.rs  native.test.ts  non-transferable.rs  non-trns_nft.rs  nt_nft.rs  ntnft.rs  package-lock.json  package.json  test.ts  test_main_token.ts  test_ntnft.ts  test_token.ts
Task_1/: package-lock.json  package.json
Task_1/client/: client.ts
Task_1/components/: BalanceDisplay.tsx  SendSolForm.tsx
Task_1/program/: Cargo.toml
Task_1/program/src/: lib.rs
Task_1/tests/: native.test.ts
Task_2/: non_transferable.rs  package.json
Task_2/program/: Cargo.toml
Task_2/program/src/: lib.rs
Task_2/tests/: native.test.ts
my-contract/: Cargo.toml
my-contract/src/: lib.rs  mint_token_test.rs  non_transferable_nft.rs
program/: Cargo.toml
program/src/: lib.rs  nft.rs
src/: lib.rs  mint_token.rs  nft.rs  non-transferable.rs  non_transferable_nft.rs  test_nontransferable_nft.ts  test_token.ts
task1/: index.test.ts  lib.rs  mint_token.rs  test.ts
task1/test/: test.ts
task1/tests/: mint_test.ts  test.ts
task2/: lib.rs  non-transferable.rs  not_transfarable_nft.rs
task_1/: Cargo.toml
task_1/src/: mint_token.rs
task_1/test/: test.ts
task_2/: non_trns_nft.rs
test/: test.ts
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
test-ledger/rocksdb.failed/: IDENTITY  LOG
tests/: integration.rs  lib1.test.ts  lib1_2.test.ts  mint.test.ts  mint_token_test.ts  nft.test.ts  tests.ts  token_mint.test.ts
