[package]
name = "my_solana_program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.25"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tokio = "1.40.0"
#solana-sdk = "1.18.25"
solana-program-test = "1.18.25"
#getrandom = { version = "0.2.15" }

[lib]
crate-type = ["cdylib", "lib"]