[package]
name = "my-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.8"
solana-sdk = "1.8"
solana-program-test = "1.8"
tokio = { version = "1", features = ["full"] }
spl-token = { version = "3.3", features = ["no-entrypoint"] }
borsh = "0.9"

[lib]
crate-type = ["cdylib"]